corpus/baselines/conformance/jsdoc/jsdocTypeReferenceExports.errors.txt
bug27342.js(3,11): error TS2749: 'exports' refers to a value, but is being used as a type here. Did you mean 'typeof exports'?


==== bug27342.js (1 errors) ====
    module.exports = {}
    /**
     * @type {exports}
              ~~~~~~~
!!! error TS2749: 'exports' refers to a value, but is being used as a type here. Did you mean 'typeof exports'?
     */
    var x
    
    